fix gol logic, made it work without node for client mode

--- a/front/index.html
+++ b/front/index.html
@@ -2,6 +2,8 @@
 <head>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
   <script src="./gol.js"></script>
+  <!-- Becaue i'm lazy and one will work -->
+  <script src="./public/gol.js"></script> 
 </head>
 
 <body>
