--- a/front/index.html
+++ b/front/index.html
@@ -10,6 +10,8 @@
   <input name="ws" value="ws://localhost:3002" />
   <button id="status" onClick="connect()">Connect</button>
   <button onClick="tick()">Tick</button>
+  <button onClick="play()">Play</button>
+  <button onClick="pause()">Pause</button>
   <select onChange="changeTeam(this)">
     <option value="0">Team 1</option>
     <option value="1">Team 2</option>
